# pet-text-similarity

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: hobbit-wiki.txt
infra/train/: texts.py  trainer.py
models/: dataset.py
models/pet_embedding/preprocessing/: texts.py  tokenizer.py
models/pet_skipgram/: pet_skipgram.py
models/pet_skipgram/preprocessing/: tokenizer.py
