[tool.poetry]
name = "pet-text-similarity"
version = "0.1.0"
description = ""
authors = ["Fedor Shuklin <fedor.shuklin.95@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.16.0"
torch = "^2.7.1"
numpy = "2.2"
scikit-learn = "^1.7.0"
matplotlib = "^3.10.3"
numba = "^0.61.2"
pandas = "^2.3.1"
sqlalchemy = "^2.0.41"
sentence-transformers = "^5.0.0"
datasets = "^4.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
